[*] fixe de la taille de police en version mobile

--- a/css/app.css
+++ b/css/app.css
@@ -162,3 +162,20 @@ div#formHeaderContainer {
     bottom: 0px !important;
     right: 70px;
 }
+
+
+@media print, screen and (max-width: 40em) {
+    #questionText {
+        font-size: 24px;
+    }
+    #btnDonQuestion {
+        width: 150px;
+    }
+    #whyText {
+        font-size: 24px;
+    }
+    #answerText {
+        padding: 30px 0;
+        font-size: 24px;
+    }
+}
